--- a/catalog/templates/products_detail.html
+++ b/catalog/templates/products_detail.html
@@ -5,23 +5,17 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
                 <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                         preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#55595c"/>
-                        <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                    </svg>
+                    <img src="{{ product.image.url }}" alt="{{ product.product_name }}" class="card-img-top" />
                     <div class="card-body">
-                        <p class="card-text">Наименование товара:{{ product.product_name }}</p>
-                        <p class="card-text">Описание товара:{{ product.product_description }}</p>
-                        <p class="card-text">Стоимость:{{ product.price }}</p>
-                        <p class="card-text">Принадлежит категории:{{ product.category }}</p>
+                        <p class="card-text">Наименование товара: {{ product.product_name }}</p>
+                        <p class="card-text">Описание товара: {{ product.product_description |slice:":100" }}</p>
+                        <p class="card-text">Стоимость: {{ product.price }}</p>
+                        <p class="card-text">Принадлежит категории: {{ product.category }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a class="btn btn-primary" href="{% url 'products: product_list' %}"
+                                <a class="btn btn-primary" href="{% url 'catalog:product_list' %}"
                                    role="button">Назад</a>
                             </div>
-                            <small class="text-body-secondary">9 mins</small>
                         </div>
                     </div>
                 </div>
