--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'catalog/base.html' %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
@@ -7,10 +7,10 @@
                 <div class="card shadow-sm">
                     <img src="{{ product.image.url }}" alt="{{ product.product_name }}" class="card-img-top" />
                     <div class="card-body">
-                        <p class="card-text">Наименование товара: {{ product.product_name }}</p>
-                        <p class="card-text">Описание товара: {{ product.product_description |slice:":100" }}</p>
-                        <p class="card-text">Стоимость: {{ product.price }}</p>
-                        <p class="card-text">Принадлежит категории: {{ product.category }}</p>
+                        <p class="card-text">Наименование товара: {{ object.product_name }}</p>
+                        <p class="card-text">Описание товара: {{ object.product_description |slice:":100" }}</p>
+                        <p class="card-text">Стоимость: {{ object.price }}</p>
+                        <p class="card-text">Принадлежит категории: {{ object.category }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a class="btn btn-primary" href="{% url 'catalog:product_list' %}"
