--- a/catalog/templates/catalog/contact.html
+++ b/catalog/templates/catalog/contact.html
@@ -9,6 +9,6 @@
     <h1>Контактная информация</h1>
     <p>Email: example@example.com</p>
     <p>Телефон: +1234567890</p>
-    <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:home' %}">Вернуться на главную страницу</a>
+    <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:product_list' %}">Вернуться на главную страницу</a>
 </body>
 </html>
