--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,6 +1,9 @@
 {% extends 'catalog/base.html' %}
 {% load my_tags %}
 {% block content %}
+<div class="col-12 mb-5">
+    <a class="btn btn-outline-primary" href="{% url 'catalog:create_product' %}">Добавить продукт</a>
+</div>
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -12,7 +15,12 @@
                         <p class="card-text">{{ product.product_name}}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a class="btn btn-primary" href="{% url 'catalog:products_detail' product.pk %}" role="button">Посмотреть</a>
+                                <a class="btn btn-primary" href="{% url 'catalog:products_detail' product.pk %}"
+                                   role="button">Посмотреть</a>
+                                <a class="btn btn-primary" href="{% url 'catalog:update_product' product.pk %}"
+                                   role="button">Редактировать</a>
+                                <a class="btn btn-primary" href="{% url 'catalog:delete_product' product.pk %}"
+                                   role="button">Удалить</a>
                             </div>
                         </div>
                     </div>
