--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -13,6 +13,13 @@
                     <img src="{{ product.image| media_filter}}">
                     <div class="card-body">
                         <p class="card-text">{{ product.product_name}}</p>
+                        {% with active_version=product.get_active_version %}
+                        {% if active_version %}
+                        Название версии: {{ active_version.name }}
+                        {% else %}
+                        Нет доступной активной версии.
+                        {% endif %}
+                        {% endwith %}
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a class="btn btn-primary" href="{% url 'catalog:products_detail' product.pk %}"
