fix clean_description, add class StyleFormMixin

--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -15,7 +15,7 @@
                         <p class="card-text">{{ product.product_name}}</p>
                         {% with active_version=product.get_active_version %}
                         {% if active_version %}
-                        Название версии: {{ active_version.name }}
+                        Версия: {{ active_version.name }}
                         {% else %}
                         Нет доступной активной версии.
                         {% endif %}
