--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -5,18 +5,22 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="{{ product.image.url }}" alt="{{ product.product_name }}" class="card-img-top"/>
+                    {% if product.image %}
+                    <img src="{{ product.image.url }}" alt="{{ product.product_name }}">
+                    {% else %}
+                    <p>No image available.</p>
+                    {% endif %}
                     <div class="card-body">
                         <p class="card-text">Наименование товара: {{ object.product_name }}</p>
                         <p class="card-text">Описание товара: {{ object.product_description |slice:":100" }}</p>
                         <p class="card-text">Стоимость: {{ object.price }}</p>
                         <p class="card-text">Принадлежит категории: {{ object.category }}</p>
                         {% if active_versions %}
-                            {% for version in active_versions %}
-                            <p>Версия: {{ version.version_number }} Название: {{ version.name }}</p>
-                            {% endfor %}
+                        {% for version in active_versions %}
+                        <p>Версия: {{ version.version_number }} Название: {{ version.name }}</p>
+                        {% endfor %}
                         {% else %}
-                            <p>Нет доступных активных версий для данного продукта.</p>
+                        <p>Нет доступных активных версий для данного продукта.</p>
                         {% endif %}
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
