--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,25 +1,41 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-<div class="col-12">
-    <div class="row">
+<div class="container">
+    <form class="row" method="post" enctype="multipart/form-data">
         <div class="col-6">
             <div class="card">
+                    {% if object %}
+                        <p class="card-text">Редактирование продукта</p>
+                        {% else %}
+                        <p class="card-text">Создание продукта</p>
+                        {% endif %}
+
                 <div class="card-body">
-                    <form method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-success">
-                            {% if object %}
-                                Сохранить
-                            {% else %}
-                                Создать
-                            {% endif %}
-                        </button>
-                    </form>
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-success">
+                        {% if object %}
+                        Сохранить
+                        {% else %}
+                        Создать
+                        {% endif %}
+                    </button>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="col-6">
+            <div class="card">
+                <p class="card-text">Версия</p>
+                <div class="card-body">
+                   {{ formset.management_form }}
+                    {% for form in formset.forms %}
+                    {{ form.as_p }}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
+
 {% endblock %}
