add generation password

--- a/users/templates/users/change_password.html
+++ b/users/templates/users/change_password.html
@@ -1,3 +1,4 @@
+
 {% extends 'catalog/base.html' %}
 
 {% block content %}
@@ -8,13 +9,9 @@
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-                     <a href="{% url 'users:change_password' %}" class="btn btn-link">
-                        Восстановить пароль
-                    </a>
                     <button type="submit" class="btn btn-success">
-                        Войти
+                        Поменять пароль 
                     </button>
-
                 </div>
             </div>
         </div>
